@@ -1,3 +1,7 @@
+2017-12-22  Michael Scholz  <mi-scholz@users.sourceforge.net>
+
+	* examples/site-lib/clm.fs (with-sound): Add run-reverb.
+
 2017-12-18  Michael Scholz  <mi-scholz@users.sourceforge.net>
 
 	* examples/site-lib/clm.fs (sound-let): Some bugs fixed.
